<resources>
    <string name="app_name">DPUHelpdesk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="header">DPU HelpDesk</string>
    <string name="helpButton">Help</string>
    <string name="headLogoName">DPU</string>
    <string name="knowledgebase1">KnowledgeBase</string>
    <string name="submitrequest1">Email Helpdesk</string>
    <string name="faqButton">Freqeuntly Asked Questions(FAQ)</string>
    <string name="submitTechnician">Give feedback on this app</string>
    <string name="callButton">Call Helpdesk</string>
    <string name="developerButton">Develop this App</string>
    <string name="knowledgeBaseButton1">Accounts/Login</string>
    <string name="knowledgeBaseButton2">Basic Technology Information</string>
    <string name="knowledgeBaseButton3">Dyknow</string>
    <string name="knowledgeBaseButton4">e-Services</string>
    <string name="knowledgeBaseButton5">Google Apps for Education</string>
    <string name="knowledgeBaseButton6">Hardware</string>
    <string name="knowledgeBaseButton7">Healthy Computing</string>
    <string name="knowledgeBaseButton8">Instructional Support and software</string>
    <string name="knowledgeBaseButton9">Moodle</string>
    <string name="knowledgeBaseButton10">Multimedia and Web</string>
    <string name="knowledgeBaseButton11">Network</string>
    <string name="knowledgeBaseButton12">Phones</string>
    <string name="knowledgeBaseButton13">Printing</string>
    <string name="accountsActivityButton1">ID Cards</string>
    <string name="accountsActivityButton2">Meal Plan</string>
    <string name="accountsActivityButton3">Payroll</string>
    <string name="accountsActivityButton4">Passwords</string>
    <string name="accountsActivityButton5">Virtual Private Network (VPN)</string>
    <string name="accountsActivityButton6">Print Quota</string>
    <string name="basicActivityButton1">Burn CD on Mac</string>
    <string name="basicActivityButton2">Burn CD on Windows</string>
    <string name="basicActivityButton4">Optimizing (compressing) Images on Mac; Microsoft</string>
    <string name="basicActivityButton5">Optimizing (compressing) Images on Mac: iPhoto</string>
    <string name="basicActivityButton6">Optimizing (compressing) Images on Windows: Microsoft</string>
    <string name="basicActivityButton7">Optimizing (compressing) Images on Windows: AdobeFireWorks</string>
    <string name="basicActivityButton8">PDF: Installing PDF995, Windows</string>
    <string name="basicActivityButton9">PDF: Creating PDF995 Document, Windows</string>
    <string name="basicActivityButton10">PDF: Creating on Mac</string>
    <string name="basicActivityButton11">PDF: Scanning</string>
    <string name="basicActivityButton12">Scanning: HP Scan</string>
    <string name="basicActivityButton13">Scanning: Adobe Photoshop Image Scan</string>
    <string name="basicActivityButton14">Scanning: OCR with OmniPage</string>
    <string name="basicActivityButton15">Screenshot: on Mac</string>
    <string name="basicActivityButton16">Screenshot: on Windows 7</string>
    <string name="basicActivityButton17">Screenshot: on Windows XP</string>
    <string name="basicActivityButton18">Software Update: Mac</string>
    <string name="basicActivityButton19">Software Update: Windows</string>
    <string name="basicActivityButton20">Technology Purchases</string>
    <string name="basicActivityButton21">Student Laptop Program</string>
    <string name="basicActivityButton22">Purchasing your laptop</string>
    <string name="basicActivityButton23">Software and service</string>
    <string name="basicActivityButton24">Frequently Asked Questions (FAQ)</string>
    <string name="basicActivityButton25">International Students</string>
    <string name="dyknowActivityButton1">Dyknow</string>
    <string name="dyknowActivityButton2">Dyknow: Installing Dyknow</string>
    <string name="dyknowActivityButton3">DyKnow: Help and Support Options</string>
    <string name="dyknowActivityButton4">Dyknow: Frequently Asked Questions (FAQs)</string>
    <string name="dyknowActivityButton5">DyKnow: Helpful Instructor Tips</string>
    <string name="dyknowActivityButton6">DyKnow: Quick Guide for Students</string>
    <string name="eservicesActivityButton1">Eservices</string>
    <string name="eservicesActivityButton2">Eservices: Log in</string>
    <string name="eservicesActivityButton3">Eservices: Password Change</string>
    <string name="googleActivityButton1">Google Apps</string>
    <string name="googleActivityButton2">Activating your Google Apps account</string>
    <string name="googleActivityButton3">Login: Google Apps</string>
    <string name="googleActivityButton4">Change password: Google Apps</string>
    <string name="googleActivityButton5">Making Google Apps your default email client</string>
    <string name="googleActivityButton6">Creating HTML emails</string>
    <string name="googleActivityButton7">Mobile devices: Setup your mobile phone</string>
    <string name="googleActivityButton8">POP Settings specific to DePauw</string>
    <string name="googleActivityButton9">Read mail from other accounts using Mail Fetcher</string>
    <string name="googleActivityButton10">Google Apps: Frequently Asked Questions (FAQs)</string>
    <string name="googleActivityButton11">Scheduling and other calendar basics</string>
    <string name="googleActivityButton12">Setup reminders, sharing, and more</string>
    <string name="googleActivityButton13">View Google Calendar interactive tour</string>
    <string name="googleActivityButton14">An overview of Google Drive</string>
    <string name="googleActivityButton15">Create and save a document</string>
    <string name="googleActivityButton16">Edit and format a document</string>
    <string name="googleActivityButton17">Insert an image</string>
    <string name="googleActivityButton18">Share your document with other people</string>
    <string name="googleActivityButton19">Create and save a spreadsheet</string>
    <string name="googleActivityButton20">Edit and format a spreadsheet</string>
    <string name="googleActivityButton21">Add formulas to a spreadsheet</string>
    <string name="googleActivityButton22">Insert a chart in a spreadsheet</string>
    <string name="googleActivityButton23">Share your spreadsheet with other people</string>
    <string name="googleActivityButton24">Create, send, share, and edit a form</string>
    <string name="googleActivityButton25">Add a theme to a form</string>
    <string name="googleActivityButton26">Collect and view form responses</string>
    <string name="googleActivityButton27">Page navigation and how to embed a form</string>
    <string name="hardwareActivityButton1">Hardware</string>
    <string name="hardwareActivityButton2">Technology Labs and Classroom</string>
    <string name="hardwareActivityButton3">Media Services</string>
    <string name="hardwareActivityButton4">ATT discount</string>
    <string name="healthyActivityButton1">Healthy Computing</string>
    <string name="healthyActivityButton2">Backing up your computer</string>
    <string name="healthyActivityButton3">File management</string>
    <string name="healthyActivityButton4">Mac: Keychain</string>
    <string name="healthyActivityButton5">Protecting your computer from malware</string>
    <string name="healthyActivityButton6">Symantec Endpoint Protection: Mac 10.4 and older</string>
    <string name="healthyActivityButton7">Symantec Endpoint Protection: Mac 10.5 (Leopard) and 10.6 (Snow Leopard)</string>
    <string name="healthyActivityButton8">Symantec Endpoint Protection: Mac 10.7 (Lion)</string>
    <string name="healthyActivityButton9">Symantec Endpoint Protection: Mac 10.8 (Mountain Lion)</string>
    <string name="healthyActivityButton10">Symantec Endpoint Protection: Windows XP, 7, and 8</string>
    <string name="healthyActivityButton11">Spam</string>
    <string name="instructionalActivityButton1">Absence Preparedness</string>
    <string name="instructionalActivityButton2">Dyknow</string>
    <string name="instructionalActivityButton3">Dyknow: Installing Dyknow</string>
    <string name="instructionalActivityButton4">DyKnow: Help and Support Options</string>
    <string name="instructionalActivityButton5">Dyknow: Frequently Asked Questions (FAQs)</string>
    <string name="instructionalActivityButton6">DyKnow: Helpful Instructor Tips</string>
    <string name="instructionalActivityButton7">Dyknow: Student</string>
    <string name="instructionalActivityButton8">ChemDraw</string>
    <string name="instructionalActivityButton9">Moodle</string>
    <string name="instructionalActivityButton10">Moodle: Navigation</string>
    <string name="instructionalActivityButton11">Moodle: Faculty Login </string>
    <string name="instructionalActivityButton12">Moodle: Course Backup and Restore into Moodle 2.3</string>
    <string name="instructionalActivityButton13">Moodle: Change password; DePauw Account</string>
    <string name="instructionalActivityButton14">Moodle: Managing Course Settings</string>
    <string name="instructionalActivityButton15">Moodle: Creating assignments</string>
    <string name="instructionalActivityButton16">Moodle: Creating forums</string>
    <string name="instructionalActivityButton17">Moodle: Create a wiki</string>
    <string name="instructionalActivityButton18">Moodle: Creating groups</string>
    <string name="instructionalActivityButton19">Moodle: Using gradebook</string>
    <string name="instructionalActivityButton20">Moodle: Exporting the gradebook</string>
    <string name="instructionalActivityButton21">Moodle: Moodle Overview for Faculty</string>
    <string name="instructionalActivityButton22">Moodle: Saving Mac Documents for Uploading to Moodle</string>
    <string name="instructionalActivityButton23">Moodle: Managing a Moodle course</string>
    <string name="instructionalActivityButton24">Moodle: Managing content</string>
    <string name="instructionalActivityButton25">Moodle: FAQ</string>
    <string name="moodleActivityButton1">Moodle</string>
    <string name="moodleActivityButton2">Moodle: Navigation</string>
    <string name="moodleActivityButton3">Moodle: Faculty Login</string>
    <string name="moodleActivityButton4">Moodle: Course Backup and Restore into Moodle 2.3</string>
    <string name="moodleActivityButton5">Moodle: Change password; DePauw Account</string>
    <string name="moodleActivityButton6">Moodle: Managing Course Settings</string>
    <string name="moodleActivityButton7">Moodle: Creating assignments</string>
    <string name="printingActivityButton1">Printing Services</string>
    <string name="printingActivityButton2">Printing from a Mac</string>
    <string name="printingActivityButton3">Printing from Windows</string>
    <string name="printingActivityButton4">Sync your ID card</string>
    <string name="printingActivityButton5">connect to network</string>
    <string name="printingActivityButton6">Release the print job</string>
    <string name="printingActivityButton7">printing from USB on a B/W printer</string>
    <string name="printingActivityButton8">Printing from USB  on a color printer</string>
    <string name="printingActivityButton9">Copy in black and white</string>
    <string name="printingActivityButton10">Copying in color</string>
    <string name="printingActivityButton11">reducing or enlarging copies</string>
    <string name="printingActivityButton12">Scan and send to myself in B/W</string>
    <string name="printingActivityButton13">Scan and send to myself in color</string>
    <string name="printingActivityButton14">Scan and store USB in B/W</string>
    <string name="printingActivityButton15">Scan and store USB in color</string>
    <string name="printingActivityButton16">Learn more</string>
    <string name="printingActivityButton17">Benefits</string>
    <string name="printingActivityButton18">Student print quotas</string>
</resources>